ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/ios/protocol_c.framework/Headers/ido_protocol_public_interface.h

//回调处理函数,音频采样率转换完成回调
//@param error_code 0:成功  1:失败,采样率已经是44.1kHZ不需要转换  2:失败,pcm转换失败  3:失败,读取文件失败
typedef void (*mp3tomp3_complete_cb_handle)(uint32_t error_code);
//回调处理函数,上报进度
typedef void (*protocol_report_progress_cb_handle)(uint8_t progress);
//回调处理函数,上报完成
typedef void (*protocol_report_complete_cb_handle)(uint32_t error_vale);
/**
 * @brief 制作思澈表盘文件,会在输入路径下生成(.watch)表盘文件
 * @param file_path 素材文件路径
 * @return 0成功 非0失败 -1: 没有控件 -2: json文件加载失败
 */
extern int mkSifliDialFile(const char *file_path);
/**
 * @brief 获取思澈表盘(.watch)文件占用空间大小，计算规则：
 * nor方案：对表盘所有文件以4096向上取整  -98平台对应的项目，IDW27,205G Pro,IDW28,IDS05，DR03等
 * nand方案：对表盘所有文件以2048向上取整 -99平台对应的项目，GTX12,GTX13,GTR1,TIT21
 * @param file_path .watch文件路径，包含文件名
 * @param platform 平台类型，目前有98(nor)，99(nand)平台
 * @return size 文件占用磁盘的实际大小，-1:失败，文件路径访问失败，-2:失败，申请内存失败，-3:失败，读取文件失败，-4:失败，输入平台类型不支持
 * */
extern int getSifliDialSize(const char *file_path,int platform);
/**
 * @brief 压缩png图片质量
 * @param inputFilePath   输入文件路径
 * @param outputFilePath 输出文件路径
 * @return int 成功 SUCCESS
 * */
extern int compressToPNG(const char *inputFilePath,const char *outputFilePath);
/**
 * @brief jpg转png
 * @param inputFilePath   输入文件路径
 * @param outputFilePath 输出文件路径
 * @return int 0 成功, 1 已经是png，其它失败
 * */
extern int jpgToPNG(const char *inputFilePath,const char *outputFilePath);
/**
 * @brief mp3音频文件采样率转换  将采样率转化为44.1khz
 * @param in_path   音频输入文件路径 目录及文件名、文件名后缀
 * @param out_path 音频输出文件路径 目录及文件名、文件名后缀
 * @param in_size   音频输入文件大小
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int AudioSamplingRateConversion(const char * in_path,const char * out_path,int in_size);
/**
 * @brief pcm音频文件转换指定采样率
 * @param confi_path  采样率转换配置文件的路径包括文件名
 * @param output_dir_path 采样率转换后的目标文件夹路径
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int PcmFileSamplingRateConversion(const char * confi_path,const char * output_dir_path);
/**
 * @brief 音频文件格式转换 mp3转pcm
 * @param in_path   音频输入文件路径 目录及文件名、文件名后缀(.mp3)
 * @param out_path 音频输出文件路径 目录及文件名、文件名后缀(.pcm)
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int AudioFormatConversionMp32Pcm(const char * in_path,const char * out_path);
/**
 * @brief 音频文件格式转换 mp3转pcm进度注册函数
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int AudioFormatConversionMp32PcmProgressReg(protocol_report_progress_cb_handle func);
/**
 * @brief 音频文件格式转换 mp3转pcm完成注册函数
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int AudioFormatConversionMp32PcmCompleteReg(protocol_report_complete_cb_handle func);
/**
 * @brief 音频采样率转换完成回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern int AudioSRConversionCompletCallbackReg(mp3tomp3_complete_cb_handle func);
/**
 * @brief 音频采样率转换进度回调注册
 * @param func 函数指针
 * @return SUCCESS(0)成功
 * */
extern int AudioSRConversionProgressCallbackReg(protocol_report_progress_cb_handle func);
/**
 * @brief 获取mp3音频采样率
 * @param in_path 输入带路径MP3文件名
 * @return int 输入MP3文件的采样率
 * */
extern int AduioGetMp3SamplingRate(const char * in_path);
// ------------------------------ 工具接口 ------------------------------
/**
 * @brief 制作功能表信息文件
 * @param path 输出文件路径(包含文件名及后缀)
 * @return:
 *   SUCCESS(0) : 成功
 */
extern int funcTableOutputOnJsonFile(char *path);
/**
 * @brief 模拟器回应数据解释，传入key`replyinfo`，输出对应的字节数据
 * @param json_data 素材JSON数据，对应事件号的`replyinfo`
 * @param json_data_len 素材JSON数据长度
 * @param evt 事件号
 * @return JSON字符串，转换后的字节数据用JSON格式返回
 */
extern char *simulatorRespondInfoExec(const char *json_data,int json_data_len,int evt);
/**
 * @brief 模拟器收到APP的字节数据，解释成对应的json内容输出
 * @param data 素材字节数据
 * @param data_len 字节数据长度
 * @return 输出json数据字符串
 */
extern char *simulatorReceiveBinary2Json(const char *data,int data_len);
/**
 * @brief 计算长包指令的校验码
 * @param data 素材字节数据
 * @param data_len 字节数据长度
 * @return 输出2个字节的CRC校验码
 */
extern uint16_t getCrc16(const char *data,int data_len);
/**
 * @brief 获取是否支持断点续传的功能表
 * @return 0不支持 1支持
 * */
extern int getIsSupportTranContinue(void);
// ------------------------------ v2闹钟同步 ------------------------------

///**
// * @brief 清除v2闹钟缓存
// * @return SUCCESS(0) 成功
// * */
//extern int ProtooclV2CleanAlarm(void);
//
///**
// * @brief 开启同步v2闹钟,50ms下发一个闹钟直至发完为止
// * @return {SUCCESS(0)成功, ERROR_INVALID_STATE(8)失败}
// * */
//extern int ProtocolV2SetAlarmESyncStart(void);
//
///**
// * @brief暂停同步v2闹钟
// * @return SUCCESS(0)成功
// * */
//extern int ProtocolV2SetAlarmSyncStop(void);

// ------------------------------ v2消息/来电提醒 ------------------------------
/**
 * @brief v2发送来电提醒以及来电电话号码和来电联系人(部分设备实现)
 * @param contactText 联系人名称
 * @param phoneNumber 号码
 * @return SUCCESS(0) 成功
 * */
extern int ProtocolV2SetCallEvt(char *contactText, char *phoneNumber);