ido_sdk_flutter/ido_sdk/protocol_sdk/protocol_ffi/lib/src/ffi/ido_protocol_ffi.g.dart


  late final _mkSifliDialFilePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'mkSifliDialFile');
  late final _mkSifliDialFile =
      _mkSifliDialFilePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief 获取思澈表盘(.watch)文件占用空间大小，计算规则：
  /// nor方案：对表盘所有文件以4096向上取整  -98平台对应的项目，IDW27,205G Pro,IDW28,IDS05，DR03等
  /// nand方案：对表盘所有文件以2048向上取整 -99平台对应的项目，GTX12,GTX13,GTR1,TIT21
  /// @param file_path .watch文件路径，包含文件名
  /// @param platform 平台类型，目前有98(nor)，99(nand)平台
  /// @return size 文件占用磁盘的实际大小，-1:失败，文件路径访问失败，-2:失败，申请内存失败，-3:失败，读取文件失败，-4:失败，输入平台类型不支持
  int getSifliDialSize(
    ffi.Pointer<ffi.Char> file_path,
    int platform,
  ) {
    return _getSifliDialSize(
      file_path,
      platform,
    );
  }

  late final _getSifliDialSizePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'getSifliDialSize');
  late final _getSifliDialSize = _getSifliDialSizePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// @brief 压缩png图片质量
  /// @param inputFilePath   输入文件路径
  /// @param outputFilePath 输出文件路径
  /// @return int 成功 SUCCESS
  int compressToPNG(
    ffi.Pointer<ffi.Char> inputFilePath,
    ffi.Pointer<ffi.Char> outputFilePath,
  ) {
    return _compressToPNG(
      inputFilePath,
      outputFilePath,
    );
  }

  late final _compressToPNGPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('compressToPNG');
  late final _compressToPNG = _compressToPNGPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// @brief jpg转png
  /// @param inputFilePath   输入文件路径
  /// @param outputFilePath 输出文件路径
  /// @return int 0 成功, 1 已经是png，其它失败
  int jpgToPNG(
    ffi.Pointer<ffi.Char> inputFilePath,
    ffi.Pointer<ffi.Char> outputFilePath,
  ) {
    return _jpgToPNG(
      inputFilePath,
      outputFilePath,
    );
  }

  late final _jpgToPNGPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('jpgToPNG');
  late final _jpgToPNG = _jpgToPNGPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// @brief mp3音频文件采样率转换  将采样率转化为44.1khz
  /// @param in_path   音频输入文件路径 目录及文件名、文件名后缀
  /// @param out_path 音频输出文件路径 目录及文件名、文件名后缀
  /// @param in_size   音频输入文件大小
  /// @return:
  /// SUCCESS(0) : 成功
  int AudioSamplingRateConversion(
    ffi.Pointer<ffi.Char> in_path,
    ffi.Pointer<ffi.Char> out_path,
    int in_size,
  ) {
    return _AudioSamplingRateConversion(
      in_path,
      out_path,
      in_size,
    );
  }

  late final _AudioSamplingRateConversionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('AudioSamplingRateConversion');
  late final _AudioSamplingRateConversion =
      _AudioSamplingRateConversionPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  /// @brief pcm音频文件转换指定采样率
  /// @param confi_path  采样率转换配置文件的路径包括文件名
  /// @param output_dir_path 采样率转换后的目标文件夹路径
  /// @return:
  /// SUCCESS(0) : 成功
  int PcmFileSamplingRateConversion(
    ffi.Pointer<ffi.Char> confi_path,
    ffi.Pointer<ffi.Char> output_dir_path,
  ) {
    return _PcmFileSamplingRateConversion(
      confi_path,
      output_dir_path,
    );
  }

  late final _PcmFileSamplingRateConversionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('PcmFileSamplingRateConversion');
  late final _PcmFileSamplingRateConversion = _PcmFileSamplingRateConversionPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// @brief 音频文件格式转换 mp3转pcm
  /// @param in_path   音频输入文件路径 目录及文件名、文件名后缀(.mp3)
  /// @param out_path 音频输出文件路径 目录及文件名、文件名后缀(.pcm)
  /// @return:
  /// SUCCESS(0) : 成功
  int AudioFormatConversionMp32Pcm(
    ffi.Pointer<ffi.Char> in_path,
    ffi.Pointer<ffi.Char> out_path,
  ) {
    return _AudioFormatConversionMp32Pcm(
      in_path,
      out_path,
    );
  }

  late final _AudioFormatConversionMp32PcmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AudioFormatConversionMp32Pcm');
  late final _AudioFormatConversionMp32Pcm = _AudioFormatConversionMp32PcmPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// @brief 音频文件格式转换 mp3转pcm进度注册函数
  /// @return:
  /// SUCCESS(0) : 成功
  int AudioFormatConversionMp32PcmProgressReg(
    protocol_report_progress_cb_handle func,
  ) {
    return _AudioFormatConversionMp32PcmProgressReg(
      func,
    );
  }

  late final _AudioFormatConversionMp32PcmProgressRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_progress_cb_handle)>>(
      'AudioFormatConversionMp32PcmProgressReg');
  late final _AudioFormatConversionMp32PcmProgressReg =
      _AudioFormatConversionMp32PcmProgressRegPtr.asFunction<
          int Function(protocol_report_progress_cb_handle)>();

  /// @brief 音频文件格式转换 mp3转pcm完成注册函数
  /// @return:
  /// SUCCESS(0) : 成功
  int AudioFormatConversionMp32PcmCompleteReg(
    protocol_report_complete_cb_handle func,
  ) {
    return _AudioFormatConversionMp32PcmCompleteReg(
      func,
    );
  }

  late final _AudioFormatConversionMp32PcmCompleteRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_complete_cb_handle)>>(
      'AudioFormatConversionMp32PcmCompleteReg');
  late final _AudioFormatConversionMp32PcmCompleteReg =
      _AudioFormatConversionMp32PcmCompleteRegPtr.asFunction<
          int Function(protocol_report_complete_cb_handle)>();

  /// @brief 音频采样率转换完成回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int AudioSRConversionCompletCallbackReg(
    mp3tomp3_complete_cb_handle func,
  ) {
    return _AudioSRConversionCompletCallbackReg(
      func,
    );
  }

  late final _AudioSRConversionCompletCallbackRegPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(mp3tomp3_complete_cb_handle)>>(
      'AudioSRConversionCompletCallbackReg');
  late final _AudioSRConversionCompletCallbackReg =
      _AudioSRConversionCompletCallbackRegPtr.asFunction<
          int Function(mp3tomp3_complete_cb_handle)>();

  /// @brief 音频采样率转换进度回调注册
  /// @param func 函数指针
  /// @return SUCCESS(0)成功
  int AudioSRConversionProgressCallbackReg(
    protocol_report_progress_cb_handle func,
  ) {
    return _AudioSRConversionProgressCallbackReg(
      func,
    );
  }

  late final _AudioSRConversionProgressCallbackRegPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(protocol_report_progress_cb_handle)>>(
      'AudioSRConversionProgressCallbackReg');
  late final _AudioSRConversionProgressCallbackReg =
      _AudioSRConversionProgressCallbackRegPtr.asFunction<
          int Function(protocol_report_progress_cb_handle)>();

  /// @brief 获取mp3音频采样率
  /// @param in_path 输入带路径MP3文件名
  /// @return int 输入MP3文件的采样率
  int AduioGetMp3SamplingRate(
    ffi.Pointer<ffi.Char> in_path,
  ) {
    return _AduioGetMp3SamplingRate(
      in_path,
    );
  }

  late final _AduioGetMp3SamplingRatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'AduioGetMp3SamplingRate');
  late final _AduioGetMp3SamplingRate = _AduioGetMp3SamplingRatePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>)>();

  /// ------------------------------ 工具接口 ------------------------------
  /// /**
  ///  * @brief 制作功能表信息文件
  ///  * @param path 输出文件路径(包含文件名及后缀)
  ///  * @return:
  ///  *   SUCCESS(0) : 成功
  ///  */
  int funcTableOutputOnJsonFile(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _funcTableOutputOnJsonFile(
      path,
    );
  }

  late final _funcTableOutputOnJsonFilePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'funcTableOutputOnJsonFile');
  late final _funcTableOutputOnJsonFile = _funcTableOutputOnJsonFilePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// @brief 模拟器回应数据解释，传入key`replyinfo`，输出对应的字节数据
  /// @param json_data 素材JSON数据，对应事件号的`replyinfo`
  /// @param json_data_len 素材JSON数据长度
  /// @param evt 事件号
  /// @return JSON字符串，转换后的字节数据用JSON格式返回
  ffi.Pointer<ffi.Char> simulatorRespondInfoExec(
    ffi.Pointer<ffi.Char> json_data,
    int json_data_len,
    int evt,
  ) {
    return _simulatorRespondInfoExec(
      json_data,
      json_data_len,
      evt,
    );
  }

  late final _simulatorRespondInfoExecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('simulatorRespondInfoExec');
  late final _simulatorRespondInfoExec =
      _simulatorRespondInfoExecPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int, int)>();

  /// @brief 模拟器收到APP的字节数据，解释成对应的json内容输出
  /// @param data 素材字节数据
  /// @param data_len 字节数据长度
  /// @return 输出json数据字符串
  ffi.Pointer<ffi.Char> simulatorReceiveBinary2Json(
    ffi.Pointer<ffi.Char> data,
    int data_len,
  ) {
    return _simulatorReceiveBinary2Json(
      data,
      data_len,
    );
  }

  late final _simulatorReceiveBinary2JsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('simulatorReceiveBinary2Json');
  late final _simulatorReceiveBinary2Json = _simulatorReceiveBinary2JsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  /// @brief 计算长包指令的校验码
  /// @param data 素材字节数据
  /// @param data_len 字节数据长度
  /// @return 输出2个字节的CRC校验码
  int getCrc16(
    ffi.Pointer<ffi.Char> data,
    int data_len,
  ) {
    return _getCrc16(
      data,
      data_len,
    );
  }

  late final _getCrc16Ptr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'getCrc16');
  late final _getCrc16 =
      _getCrc16Ptr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// @brief 获取是否支持断点续传的功能表
  /// @return 0不支持 1支持
  int getIsSupportTranContinue() {
    return _getIsSupportTranContinue();
  }

  late final _getIsSupportTranContinuePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'getIsSupportTranContinue');
  late final _getIsSupportTranContinue =
      _getIsSupportTranContinuePtr.asFunction<int Function()>();

  /// ------------------------------ v2消息/来电提醒 ------------------------------
  /// /**
  ///  * @brief v2发送来电提醒以及来电电话号码和来电联系人(部分设备实现)
  ///  * @param contactText 联系人名称
  ///  * @param phoneNumber 号码
  ///  * @return SUCCESS(0) 成功
  ///  * */
  int ProtocolV2SetCallEvt(
    ffi.Pointer<ffi.Char> contactText,
    ffi.Pointer<ffi.Char> phoneNumber,
  ) {
    return _ProtocolV2SetCallEvt(
      contactText,
      phoneNumber,
    );
  }

  late final _ProtocolV2SetCallEvtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ProtocolV2SetCallEvt');
  late final _ProtocolV2SetCallEvt = _ProtocolV2SetCallEvtPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
